test/tests/stages/14_pointers/invalid_parse/cast_to_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  (
  int
  *
  *
  identifier(a)
  )
  (
  const int(10)
  )
  ;
  }
